--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -33,13 +33,13 @@
       </button>
     </form>
   {% else %}
-    <a class="nav-link-dope ajax-login d-none d-md-inline" href="/">
+    <a class="nav-link-dope ajax-login d-none d-md-inline" href="/?view=login">
       Login
     </a>
     <a class="nav-link-dope ajax-signup d-none d-md-inline" href="/?view=signup">
       Signup
     </a>
-    <a class="nav-link-dope ajax-login d-inline d-md-none" href="/">
+    <a class="nav-link-dope ajax-login d-inline d-md-none" href="/?view=login">
       <i class="fas fa-sign-in-alt icon"></i>
     </a>
   {% endif %}
