--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -28,7 +28,7 @@
     <!-- MAIN CONTENT -->
     <div id="main-wrapper">
       <div class="container-fluid sticky-top extended" id="flap">
-        <div class="row open" id="center-stage">
+        <div class="container open" id="center-stage">
           {% block center-stage %}
           {% endblock %}
         </div>
