--- a/index/templates/multibar.html
+++ b/index/templates/multibar.html
@@ -1,44 +1,43 @@
-<div class="col-2 col-lg-4" id="multibar-nav">
-  <a class="nav-link-dope d-inline d-lg-none multibar-options-toggle toggle" href="#multibar-options-collapse" data-toggle="collapse" aria-expanded="true" aria-controls="multibar-options-collapse">
+<div class="col-auto col-lg-4" id="multibar-nav">
+  <a class="nav-link-dope d-inline-block d-lg-none multibar-options-toggle toggle" href="#multibar-options-collapse" data-toggle="collapse" aria-expanded="true" aria-controls="multibar-options-collapse">
     <i class="fab fa-youtube"></i>
   </a>
-  <!-- <a class="nav-link-dope blog-link d-none d-md-inline" href="#">
+  <!-- <a class="nav-link-dope blog-link d-none d-lg-inline-block" href="#">
     Blog
   </a> -->
-  <a class="nav-link-dope browse-link d-none d-lg-inline" href="{% url 'browse' %}">
+  <a class="nav-link-dope browse-link d-none d-lg-inline-block" href="{% url 'browse' %}">
     Browse
   </a>
-  <a class="nav-link-dope charts-link d-none d-lg-inline" href="{% url 'charts' %}">
+  <a class="nav-link-dope charts-link d-none d-lg-inline-block" href="{% url 'charts' %}">
     Charts
   </a>
   {% if user.is_authenticated %}
-    <a class="nav-link-dope index-link d-none d-lg-inline" href="/">
+    <a class="nav-link-dope index-link d-none d-lg-inline-block" href="/">
       Dashboard
     </a>
-    <a class="nav-link-dope subscriptions-link d-none d-lg-inline" href="{% url 'subscriptions' %}">
+    <a class="nav-link-dope subscriptions-link d-none d-lg-inline-block" href="{% url 'subscriptions' %}">
       Subscriptions
     </a>
-    <a class="nav-link-dope settings-link d-none d-lg-inline" href="{% url 'settings' %}">
+    <a class="nav-link-dope settings-link d-none d-lg-inline-block" href="{% url 'settings' %}">
       Settings
-    </a>
-    <form class="logout-form" method="POST" action="{% url 'logout' %}">
-      {% csrf_token %}
-      <button class="nav-link-dope ajax-logout d-none d-lg-inline" type="submit">
-        Logout
-      </button>
-    </form>
-  {% else %}
-    <a class="nav-link-dope ajax-login d-none d-lg-inline" href="/?view=login">
-      Login
-    </a>
-    <a class="nav-link-dope ajax-signup d-none d-lg-inline" href="/?view=signup">
-      Signup
     </a>
   {% endif %}
 </div>
 <div class="col-lg-4 d-none d-lg-block" id="multibar-c">
 </div>
-<div class="col-10 col-lg-4" id="multibar-search">
+<div class="col col-lg-4" id="multibar-search">
+  {% if user.is_authenticated %}
+    <form class="logout-form" method="POST" action="{% url 'logout' %}">
+      {% csrf_token %}
+      <button class="nav-link-dope ajax-logout d-none d-lg-inline-block" type="submit">
+        Logout
+      </button>
+    </form>
+  {% else %}
+    <a class="nav-link-dope ajax-login d-none d-lg-inline-block" href="/?view=login">
+      Login
+    </a>
+  {% endif %}
   <form class="form-inline" id="search-form" method="GET" action="{% url 'search' %}">
     <div class="input-group" id="search-field">
       <label for="q" class="sr-only">Search</label>
