--- a/index/templates/multibar.html
+++ b/index/templates/multibar.html
@@ -1,4 +1,4 @@
-<div class="col-auto col-lg-4" id="multibar-nav">
+<div class="col-auto col-lg-4" id="multibar-l">
   <a class="nav-link-dope d-inline-block d-lg-none multibar-options-toggle toggle" href="#multibar-options-collapse" data-toggle="collapse" aria-expanded="true" aria-controls="multibar-options-collapse">
     <i class="fab fa-youtube"></i>
   </a>
@@ -25,7 +25,7 @@
 </div>
 <div class="col-lg-4 d-none d-lg-block" id="multibar-c">
 </div>
-<div class="col col-lg-4" id="multibar-search">
+<div class="col col-lg-4" id="multibar-r">
   {% if user.is_authenticated %}
     <form class="logout-form" method="POST" action="{% url 'logout' %}">
       {% csrf_token %}
