--- a/index/templates/splash.html
+++ b/index/templates/splash.html
@@ -25,28 +25,13 @@ dopepod
               </span>
             </div>
             <div class="tab-pane fade" id="tabs-login" role="tabpanel" aria-labelledby="login-tab">
-              {% if errors.general %}
-                <span class="error-message">
-                  {{ errors.general }}
-                </span>
-              {% endif %}
               <form class="login-form" method="POST" action="{% url 'login' %}">
                 {% csrf_token %}
-                {% if errors.email %}
-                  <span class="error-message">
-                    {{ errors.email }}
-                  </span>
-                {% endif %}
                 <div class="login-form-group">
                   <label class="sr-only" for="login-login">Email</label>
                   <input class="form-control login-field" type="text" name="login" placeholder="Email" autofocus="autofocus" required id="login-login" value="{{ email }}">
                 </div>
                 <div class="form-row">
-                  {% if errors.password %}
-                    <span class="error-message">
-                      {{ errors.password }}
-                    </span>
-                  {% endif %}
                   <div class="col login-form-group">
                     <label class="sr-only" for="login-password">Password</label>
                     <input class="form-control login-field" type="password" name="password" placeholder="Password" required id="login-password">
@@ -71,16 +56,36 @@ dopepod
               </form>
             </div>
             <div class="tab-pane fade show active" id="tabs-signup" role="tabpanel" aria-labelledby="signup-tab">
+              {% if errors.general %}
+                <span class="error-message">
+                  {{ errors.general }}
+                </span>
+              {% endif %}
               <form class="signup-form" method="POST" action="{% url 'signup' %}">
                 {% csrf_token %}
+                {% if errors.email %}
+                  <span class="error-message">
+                    {{ errors.email }}
+                  </span>
+                {% endif %}
                 <div class="login-form-group">
                   <label class="sr-only" for="signup-email">Email</label>
                   <input class="form-control login-field" type="email" name="email" size="30" placeholder="Email" required id="signup-email">
                 </div>
+                {% if errors.password1 %}
+                  <span class="error-message">
+                    {{ errors.password1 }}
+                  </span>
+                {% endif %}
                 <div class="login-form-group">
                   <label class="sr-only" for="signup-password1">Password</label>
                   <input class="form-control login-field" type="password" name="password1" placeholder="Password" required id="signup-password1">
                 </div>
+                {% if errors.password2 %}
+                <span class="error-message">
+                  {{ errors.password2 }}
+                </span>
+                {% endif %}
                 <div class="form-row">
                   <div class="col login-form-group">
                     <label class="sr-only" for="signup-password2">Password (again)</label>
@@ -93,24 +98,24 @@ dopepod
               </form>
             </div>
             <div class="tab-pane fade" id="tabs-password" role="tabpanel" aria-labelledby="password-tab">
-            <p>
-              Forgot your password? Enter your email address below, and we'll send you an email with a link allowing you to reset it.
-            </p>
-            <form class="password-form" method="POST" action="{% url 'password_reset' %}">
-              {% csrf_token %}
-              <div class="form-row">
-                <div class="col login-form-group">
-                  <label class="sr-only" for="forgot-email">Email</label>
-                  <input class="form-control login-field" id="forgot-email" type="email" name="email" size="30" placeholder="Email" required>
+              <p>
+                Forgot your password? Enter your email address below, and we'll send you an email with a link allowing you to reset it.
+              </p>
+              <form class="password-form" method="POST" action="{% url 'password_reset' %}">
+                {% csrf_token %}
+                <div class="form-row">
+                  <div class="col login-form-group">
+                    <label class="sr-only" for="forgot-email">Email</label>
+                    <input class="form-control login-field" id="forgot-email" type="email" name="email" size="30" placeholder="Email" required>
+                  </div>
+                  <div class="col-auto">
+                    <button class="btn btn-dope active password-button" type="submit">
+                      Send
+                    </button>
+                  </div>
                 </div>
-                <div class="col-auto">
-                  <button class="btn btn-dope active password-button" type="submit">
-                    Send
-                  </button>
-                </div>
-              </div>
-            </form>
-          </div>
+              </form>
+            </div>
           {% elif view == 'login' %}
             <div class="tab-pane fade" id="tabs-splash" role="tabpanel" aria-labelledby="splash-tab">
               <span class="site-description">
@@ -140,12 +145,12 @@ dopepod
                   <label class="sr-only" for="login-login">Email</label>
                   <input class="form-control login-field" type="text" name="login" placeholder="Email" autofocus="autofocus" required id="login-login" value="{{ email }}">
                 </div>
+                {% if errors.password %}
+                <span class="error-message">
+                  {{ errors.password }}
+                </span>
+                {% endif %}
                 <div class="form-row">
-                  {% if errors.password %}
-                    <span class="error-message">
-                      {{ errors.password }}
-                    </span>
-                  {% endif %}
                   <div class="col login-form-group">
                     <label class="sr-only" for="login-password">Password</label>
                     <input class="form-control login-field" type="password" name="password" placeholder="Password" required id="login-password">
@@ -192,24 +197,24 @@ dopepod
               </form>
             </div>
             <div class="tab-pane fade" id="tabs-password" role="tabpanel" aria-labelledby="password-tab">
-            <p>
-              Forgot your password? Enter your email address below, and we'll send you an email with a link allowing you to reset it.
-            </p>
-            <form class="password-form" method="POST" action="{% url 'password_reset' %}">
-              {% csrf_token %}
-              <div class="form-row">
-                <div class="col login-form-group">
-                  <label class="sr-only" for="forgot-email">Email</label>
-                  <input class="form-control login-field" id="forgot-email" type="email" name="email" size="30" placeholder="Email" required>
+              <p>
+                Forgot your password? Enter your email address below, and we'll send you an email with a link allowing you to reset it.
+              </p>
+              <form class="password-form" method="POST" action="{% url 'password_reset' %}">
+                {% csrf_token %}
+                <div class="form-row">
+                  <div class="col login-form-group">
+                    <label class="sr-only" for="forgot-email">Email</label>
+                    <input class="form-control login-field" id="forgot-email" type="email" name="email" size="30" placeholder="Email" required>
+                  </div>
+                  <div class="col-auto">
+                    <button class="btn btn-dope active password-button" type="submit">
+                      Send
+                    </button>
+                  </div>
                 </div>
-                <div class="col-auto">
-                  <button class="btn btn-dope active password-button" type="submit">
-                    Send
-                  </button>
-                </div>
-              </div>
-            </form>
-          </div>
+              </form>
+            </div>
           {% elif view == 'password' %}
             <div class="tab-pane fade" id="tabs-splash" role="tabpanel" aria-labelledby="splash-tab">
               <span class="site-description">
@@ -223,28 +228,13 @@ dopepod
               </span>
             </div>
             <div class="tab-pane fade" id="tabs-login" role="tabpanel" aria-labelledby="login-tab">
-              {% if errors.general %}
-                <span class="error-message">
-                  {{ errors.general }}
-                </span>
-              {% endif %}
               <form class="login-form" method="POST" action="{% url 'login' %}">
                 {% csrf_token %}
-                {% if errors.email %}
-                  <span class="error-message">
-                    {{ errors.email }}
-                  </span>
-                {% endif %}
                 <div class="login-form-group">
                   <label class="sr-only" for="login-login">Email</label>
                   <input class="form-control login-field" type="text" name="login" placeholder="Email" autofocus="autofocus" required id="login-login" value="{{ email }}">
                 </div>
                 <div class="form-row">
-                  {% if errors.password %}
-                    <span class="error-message">
-                      {{ errors.password }}
-                    </span>
-                  {% endif %}
                   <div class="col login-form-group">
                     <label class="sr-only" for="login-password">Password</label>
                     <input class="form-control login-field" type="password" name="password" placeholder="Password" required id="login-password">
@@ -291,24 +281,34 @@ dopepod
               </form>
             </div>
             <div class="tab-pane fade show active" id="tabs-password" role="tabpanel" aria-labelledby="password-tab">
-            <p>
-              Forgot your password? Enter your email address below, and we'll send you an email with a link allowing you to reset it.
-            </p>
-            <form class="password-form" method="POST" action="{% url 'password_reset' %}">
-              {% csrf_token %}
-              <div class="form-row">
-                <div class="col login-form-group">
-                  <label class="sr-only" for="forgot-email">Email</label>
-                  <input class="form-control login-field" id="forgot-email" type="email" name="email" size="30" placeholder="Email" required>
+              <p>
+                Forgot your password? Enter your email address below, and we'll send you an email with a link allowing you to reset it.
+              </p>
+              {% if errors.general %}
+                <span class="error-message">
+                  {{ errors.general }}
+                </span>
+              {% endif %}
+              <form class="password-form" method="POST" action="{% url 'password_reset' %}">
+                {% csrf_token %}
+                {% if errors.email %}
+                  <span class="error-message">
+                    {{ errors.email }}
+                  </span>
+                {% endif %}
+                <div class="form-row">
+                  <div class="col login-form-group">
+                    <label class="sr-only" for="forgot-email">Email</label>
+                    <input class="form-control login-field" id="forgot-email" type="email" name="email" size="30" placeholder="Email" required>
+                  </div>
+                  <div class="col-auto">
+                    <button class="btn btn-dope active password-button" type="submit">
+                      Send
+                    </button>
+                  </div>
                 </div>
-                <div class="col-auto">
-                  <button class="btn btn-dope active password-button" type="submit">
-                    Send
-                  </button>
-                </div>
-              </div>
-            </form>
-          </div>
+              </form>
+            </div>
           {% else %}
             <div class="tab-pane fade show active" id="tabs-splash" role="tabpanel" aria-labelledby="splash-tab">
               <span class="site-description">
@@ -322,28 +322,13 @@ dopepod
               </span>
             </div>
             <div class="tab-pane fade" id="tabs-login" role="tabpanel" aria-labelledby="login-tab">
-              {% if errors.general %}
-                <span class="error-message">
-                  {{ errors.general }}
-                </span>
-              {% endif %}
               <form class="login-form" method="POST" action="{% url 'login' %}">
                 {% csrf_token %}
-                {% if errors.email %}
-                  <span class="error-message">
-                    {{ errors.email }}
-                  </span>
-                {% endif %}
                 <div class="login-form-group">
                   <label class="sr-only" for="login-login">Email</label>
                   <input class="form-control login-field" type="text" name="login" placeholder="Email" autofocus="autofocus" required id="login-login" value="{{ email }}">
                 </div>
                 <div class="form-row">
-                  {% if errors.password %}
-                    <span class="error-message">
-                      {{ errors.password }}
-                    </span>
-                  {% endif %}
                   <div class="col login-form-group">
                     <label class="sr-only" for="login-password">Password</label>
                     <input class="form-control login-field" type="password" name="password" placeholder="Password" required id="login-password">
