--- a/podcasts/templates/podinfo.html
+++ b/podcasts/templates/podinfo.html
@@ -72,7 +72,7 @@ Listen to episodes of {{ podcast.title }} on dopepod
             </li>
           </ul>
         </div>
-        <div class="col-8 col-lg-6" id="podinfo-center">
+        <div class="col-8 col-lg-6 color-5-trans" id="podinfo-center">
           <h5 id="podinfo-title">
             {{ podcast.title }}
           </h5>
@@ -87,7 +87,7 @@ Listen to episodes of {{ podcast.title }} on dopepod
           </p>
         </div>
         <div class="col-lg-2" id="podinfo-right">
-          <ul class="podinfo-side-list d-none d-lg-block">
+          <ul class="podinfo-side-list color-5-trans d-none d-lg-block">
             {% if podcast.global_rank %}
               <li>
                 <span class="global_rank">
