--- a/index/static/style.css
+++ b/index/static/style.css
@@ -3,58 +3,62 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   line-height: 1.42857143;
   color: #2e2e2e;
-  background: rgba(255, 255, 255, 1);
   font-size: 14px;
+  background: #eee;
+  transition: background 0.5s ease;
+}
+.darken {
+  transition: background 0.5s ease;
+  background: rgba(0,105,92,1);
 }
 
 /* BUTTONS */
 .btn-dope, .btn-dope.focus, .btn-dope:focus {
-  border: 2px solid rgba(0, 0, 0, 1);
+  border: 2px solid #00bfa5;
   padding: .25rem .5rem;
   color: #2e2e2e;
   font-size: 16px;
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, .5);
   box-shadow: none;
   outline: rgba(0,0,0,0);
 }
 .btn-dope.active {
   color: #fff;
-  background: rgba(0, 0, 0, 1);
+  background: #00bfa5;
 }
 .btn-dope-tab, .btn-dope-tab.focus, .btn-dope-tab:focus {
   border-radius: .25rem .25rem 0 0;
   border-bottom: none;
-  background: inherit;
   min-width: 42px;
 }
-.btn-dope-social {
+.btn-dope-social, .btn-dope-social:hover, .btn-dope-social:focus {
   display: inline-flex;
   padding: 0;
   flex: auto;
 }
 .btn-dope:hover {
   color: #fff;
-  background: rgba(0, 0, 0, 1);
+  background: #00bfa5;
   -webkit-box-shadow: rgba(0,0,0,.8) 0 0px 8px;
   -moz-box-shadow: rgba(0,0,0,.8) 0 0px 8px;
   box-shadow: rgba(0,0,0,.8) 0 0px 8px;
 }
 .btn-dope.selected:hover {
-  color: #2e2e2e;
+  color: #00bfa5;
 }
 .toggle[aria-expanded="true"] {
   color: #fff;
-  background: rgba(0, 0, 0, 1);
-  -webkit-box-shadow: rgba(0,0,0,.3) 0 0px 5px;
-  -moz-box-shadow: inset rgba(0,0,0,.3) 0 0px 5px;
-  box-shadow: inset rgba(0,0,0,.3) 0 0px 5px;
+  background: #00bfa5;
+  -webkit-box-shadow: rgba(0,0,0,.8) 0 0px 8px;
+  -moz-box-shadow: rgba(0,0,0,.8) 0 0px 8px;
+  box-shadow: rgba(0,0,0,.8) 0 0px 8px;
 }
 .reverse-toggle[aria-expanded="false"] {
   color: #fff;
-  background: rgba(0, 0, 0, 1);
-  -webkit-box-shadow: rgba(0,0,0,.3) 0 0px 5px;
-  -moz-box-shadow: inset rgba(0,0,0,.3) 0 0px 5px;
-  box-shadow: inset rgba(0,0,0,.3) 0 0px 5px;
+  background: #00bfa5;
+  -webkit-box-shadow: rgba(0,0,0,.8) 0 0px 8px;
+  -moz-box-shadow: rgba(0,0,0,.8) 0 0px 8px;
+  box-shadow: rgba(0,0,0,.8) 0 0px 8px;
 }
 .btn-dope-disabled, .btn-dope-disabled.active, .btn-dope-disabled:hover, .btn-dope-disabled.focus, .btn-dope-disabled:focus  {
   color: #2e2e2e;
@@ -72,17 +76,33 @@ body {
 
 /* COLORS */
 .color-1 {
-  background: rgba(0, 0, 0, 1);
+  background: #004d40;
 }
 .color-1-trans {
-  background: rgba(0, 0, 0, .9);
+  background: #004d40;
 }
 .color-2 {
-  background: rgba(45,43,43,1);
+  background: #e0f2f1;
 }
 .color-2-trans {
-  background: rgba(45,43,43,.9);
+  background: #e0f2f1;
 }
+.color-3 {
+  background: #a7ffeb;
+}
+.color-4 {
+  background: rgb(0, 191, 165, 1);
+}
+.color-4 {
+  background: rgba(0, 191, 165, .9);
+}
+.color-5 {
+  background: rgba(255, 255, 255, 1);
+}
+.color-5-trans {
+  background: rgba(255, 255, 255, .5);
+}
+
 
 /* NAVBAR */
 #navbar {
@@ -511,7 +531,6 @@ body {
   min-height: 100vh;
 }
 .results {
-  border-bottom: 4px solid rgba(0, 0, 0, 1);
   margin-top: 15px;
   margin-bottom: 15px;
 }
@@ -549,7 +568,6 @@ body {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   justify-content: flex-end;
-  border-bottom: 2px solid #000;
   padding: 10px 2px 6px 10px;
 }
 .selected-group {
@@ -590,7 +608,7 @@ body {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   padding: 10px 0 6px 6px;
-  width: 350px;
+  width: 340px;
   margin-left: auto;
 }
 .alphabet-buttons {
@@ -611,9 +629,9 @@ body {
   padding-top: 4px;
   padding-bottom: 4px;
   min-height: 44px;
-  -webkit-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
-  -moz-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
-  box-shadow: rgba(0,0,0,.3) 0 1px 3px;
+  -webkit-box-shadow: rgba(0,0,0,.5) 0 2px 3px;
+  -moz-box-shadow: rgba(0,0,0,.5) 0 2px 3px;
+  box-shadow: rgba(0,0,0,.5) 0 2px 3px;
   z-index: 95;
   margin-top: 44px;
 }
@@ -621,6 +639,9 @@ body {
   padding: 0;
 }
 #multibar-l {
+  min-width: 100px;
+  height: 36px;
+  padding-left: 100px;
   padding-right: 0;
   display: inline-flex;
 }
@@ -631,6 +652,7 @@ body {
   justify-content: flex-end;
 }
 #multibar-options-collapse {
+  padding-left: 100px;
 }
 #browse-bar {
   padding-top: 6px;
@@ -652,7 +674,6 @@ body {
   top: -444px;
 }
 #center-stage {
-  background-color: #E6ECF0;
   z-index: 90;
   overflow: hidden;
 }
@@ -669,7 +690,7 @@ body {
 }
 #search-field {
   display: block;
-  min-width: 270px;
+  min-width: 180px;
   font-size: 16px;
 }
 #search-button {
@@ -693,7 +714,7 @@ body {
 #q {
   width: 100%;
   border-radius: .25rem;
-  padding: 4px 25px 4px 8px;
+  padding: 4px 30px 4px 10px;
   border: 1px solid rgba(45,43,43,.5);
 }
 #q:focus {
@@ -712,7 +733,6 @@ body {
 /* LOGIN-SIGNUP */
 #login {
   height: 400px;
-  background: #fff;
   text-align: center;
   padding-top: 15px;
 }
@@ -753,8 +773,18 @@ body {
   padding: .25rem .5rem;
 }
 .social-icon {
-  background: rgba(0, 0, 0, 1);
+  background: #00bfa5;
   color: #fff;
+}
+.done {
+  height: 400px;
+}
+.done-content {
+  text-align: center;
+  margin: auto;
+  width: 150px;
+  height: 150px;
+  padding: 10px;
 }
 
 /* DASHBOARD */
@@ -765,7 +795,6 @@ body {
   text-align: center;
   padding: 30px;
   margin: auto;
-  background: #ddd;
   -webkit-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
   -moz-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
   box-shadow: rgba(0,0,0,.3) 0 1px 3px;
@@ -774,7 +803,6 @@ body {
 
 /* SETTINGS */
 #settings {
-  background: #fff;
   position: relative;
   height: 400px;
   padding: 15px;
@@ -792,12 +820,15 @@ body {
 
 /* PODINFO */
 #podinfo {
-  background-color: #fff;
   height: 400px;
 }
 #podinfo-center {
   max-height: 330px;
   overflow: hidden;
+  -webkit-box-shadow: rgba(0,0,0,.3) 0 0 3px;
+  -moz-box-shadow: rgba(0,0,0,.3) 0 0 3px;
+  box-shadow: rgba(0,0,0,.3) 0 0 3px;
+  border-radius: .25rem;
 }
 #podinfo-main {
   padding-top: 15px;
@@ -811,13 +842,13 @@ body {
 }
 #podinfo-left {
   height: 330px;
-  background: #fff;
   text-align: center;
 }
 #podinfo-left img {
   -webkit-box-shadow: rgba(0,0,0,.3) 0 0 10px;
   -moz-box-shadow: rgba(0,0,0,.3) 0 0 10px;
   box-shadow: rgba(0,0,0,.3) 0 0 10px;
+  border-radius: .25rem;
 }
 #podinfo-right {
   max-height: 330px;
@@ -826,10 +857,12 @@ body {
 .podinfo-side-list {
   text-align: left;
   list-style: none;
-  padding-left: 0;
-  padding-top: 6px;
-  padding-bottom: 10px;
+  padding: 5px;
   margin-bottom: 0;
+  -webkit-box-shadow: rgba(0,0,0,.3) 0 0 3px;
+  -moz-box-shadow: rgba(0,0,0,.3) 0 0 3px;
+  box-shadow: rgba(0,0,0,.3) 0 0 3px;
+  border-radius: .25rem;
 }
 #podinfo-left .podinfo-side-list {
   max-height: 240px;
@@ -872,7 +905,7 @@ body {
   border-top: none;
 }
 #episodes-table tbody tr.hover:hover {
-  background: rgba(0, 0, 0, 1);
+  background: #00bfa5;
   color: #fff;
   -webkit-box-shadow: rgba(0,0,0,.3) 0 0px 3px;
   -moz-box-shadow: rgba(0,0,0,.3) 0 0 3px;
@@ -891,11 +924,13 @@ body {
   padding-top: 10px;
   padding-bottom: 10px;
   overflow: hidden;
+  border-radius: .25rem;
   -webkit-box-shadow: rgba(0,0,0,1) 0 0 4px;
   -moz-box-shadow: rgba(0,0,0,1) 0 0 4px;
   box-shadow: rgba(0,0,0,1) 0 0 4px;
 }
 .results-bar {
+
 }
 .results-header {
   font-size: 20px;
@@ -906,32 +941,17 @@ body {
     display: flex;
 }
 .results-options {
+  margin-bottom: 10px;
   margin-left: auto;
-  padding: 0;
   -ms-flex-item-align: end!important;
   align-self: flex-end!important;
 }
-.results-options ul {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-}
-.results-options ul li {
-  margin-left: 5px;
-}
 .options-select {
   overflow: hidden;
-  border-top: 2px solid rgba(0, 0, 0, 1);
-  -webkit-box-shadow: rgba(0,0,0,1) 0 0 4px;
-  -moz-box-shadow: rgba(0,0,0,1) 0 0 4px;
-  box-shadow: rgba(0,0,0,1) 0 0 4px;
 }
 .pagination {
   padding-top: 10px;
+  padding-bottom: 10px;
 }
 .results-content a, .results-content a:hover {
   text-decoration: none;
@@ -962,8 +982,8 @@ body {
 }
 .result-box img {
   transition: transform .25s ease-in-out;
-  -moz-transition: border .25s ease-in-out;
-  -webkit-transition: border .25s ease-in-out;
+  -moz-transition: transform .25s ease-in-out;
+  -webkit-transition: transform .25s ease-in-out;
   box-shadow: rgba(0,0,0,.3) 0 0 10px;
   -moz-box-shadow: rgba(0,0,0,.3) 0 0 10px;
   -webkit-box-shadow: rgba(0,0,0,.3) 0 0 10px;
@@ -978,6 +998,79 @@ body {
 .result-image {
   object-fit: cover;
   width: 100%;
+}
+.charts-result {
+  border-radius: .25rem;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  transition: all .25s ease-in-out;
+  -moz-transition: all .25s ease-in-out;
+  -webkit-transition: all .25s ease-in-out;
+}
+.charts-result:hover {
+  box-shadow: rgba(0,0,0,.3) 0 0 10px;
+  -moz-box-shadow: rgba(0,0,0,.3) 0 0 10px;
+  -webkit-box-shadow: rgba(0,0,0,.3) 0 0 10px;
+}
+.charts-result img {
+  padding: 0 10px;
+  float: left;
+}
+.charts-rank {
+  text-align: center;
+  height: 100%;
+  width: 40px;
+  float: left;
+  font-size: 32px;
+}
+.round-logo {
+  top: 0;
+  left: 15px;
+  border-radius: 50%;
+  position: absolute;
+  margin: auto;
+  height: 70px;
+  width: 70px;
+  padding-left: 29px;
+  padding-right: 28px;
+  color: #000;
+  z-index: 1000;
+  -webkit-box-shadow: rgba(0,0,0,.5) 0 0 5px;
+  -moz-box-shadow: rgba(0,0,0,.5) 0 0 5px;
+  box-shadow: rgba(0,0,0,.5) 0 0 5px;
+  transition: all .2s ease-in-out;
+}
+
+.round-logo:hover {
+  transform: scale(1.1);
+  -webkit-box-shadow: rgba(0,0,0,.5) 0 0 8px;
+  -moz-box-shadow: rgba(0,0,0,.5) 0 0 8px;
+  box-shadow: rgba(0,0,0,.5) 0 0 8px;
+}
+
+.round-logo span {
+  font-size: 24px;
+  height: 35px;
+  font-weight: 600;
+  position: absolute;
+  width: 12px;
+  top: 0;
+  transform-origin: bottom center;
+}
+.char1 { transform: rotate(0deg); }
+.char2 { transform: rotate(60deg); }
+.char3 { transform: rotate(120deg); }
+.char4 { transform: rotate(180deg); }
+.char5 { transform: rotate(240deg); }
+.char6 { transform: rotate(300deg); }
+.charts-result-title, .charts-result-title:hover {
+  overflow: hidden;
+  max-height: 48px;
+}
+.charts-result-artist, .charts-result-artist:hover {
+
+  overflow: hidden;
+  max-height: 38px;
 }
 .search-result-title, .search-result-title:hover {
   margin-top: 4px;
@@ -1029,13 +1122,14 @@ hr.h-line {
 
 /* PLAYER */
 #player {
+  color: #fff;
   border-top: 1px solid rgba(0,0,0,.3);
   -webkit-box-shadow: rgba(0,0,0,.3) 0 -1px 3px;
   -moz-box-shadow: rgba(0,0,0,.3) 0 -1px 3px;
   box-shadow: rgba(0,0,0,.3) 0 -1px 3px;
 }
 #player-wrapper a, #player-wrapper a:hover {
-  color: #2e2e2e;
+  color: #fff;
   text-decoration: none;
 }
 #player-wrapper {
@@ -1078,6 +1172,8 @@ hr.h-line {
 
 /* FOOTER */
 #footer {
+  color: #fff;
+  font-size: 16px;
   padding-top: 10px;
   padding-bottom: 10px;
   text-align: center;
