--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <!--HERE BE NAVBAR-->
-    <nav class="navbar fixed-top color-2" id="navbar">
+    <nav class="navbar fixed-top color-1-trans" id="navbar">
       <div class="container" id="navbar-drop">
         {% include 'navbar.html' %}
       </div>
@@ -33,7 +33,7 @@
           {% endblock %}
         </div>
         <!-- MULTIBAR -->
-        <nav class="navbar color-2-trans" id="multibar">
+        <nav class="navbar color-1-trans" id="multibar">
           <div class="container" id="multibar-drop">
             {% include 'multibar.html' %}
           </div>
@@ -46,16 +46,14 @@
         {% else %}
         <div class="row collapse" id="browse-collapse">
         {% endif %}
-          <div class="col">
-            <div class="alphabet-group alphabet-buttons">
-              {% for letter in alphabet %}
-              <a class="btn btn-dope alphabet-button" href="/browse/?q={{ letter }}" id="alphabet-{{ letter }}">
-                <span>
-                  {{ letter }}
-                </span>
-              </a>
-              {% endfor %}
-            </div>
+          <div class="alphabet-group alphabet-buttons">
+            {% for letter in alphabet %}
+            <a class="btn btn-dope alphabet-button" href="/browse/?q={{ letter }}" id="alphabet-{{ letter }}">
+              <span>
+                {{ letter }}
+              </span>
+            </a>
+            {% endfor %}
           </div>
         </div>
         <div class="row" id="episodes">
